--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 80vmin;
   pointer-events: none;
 }
 
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1a1a1a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgba(31, 31, 31, 0.541);
 }
 
-.App-link {
-  color: #61dafb;
+.RouteLinks {
+  background-color: #ff0000;
 }
 
 @keyframes App-logo-spin {
