--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -1,7 +1,15 @@
 .PostProfileLink{
     color: rgb(255, 255, 255);
+    background-color: black;
+    padding-left: 5px;
+    font-size: 15px;
 }
 
 .PostProfileLink:hover{
-    color: red;
+    color: rgb(255, 255, 255);
+    text-decoration: underline;
+}
+
+.card{
+    background-color: black;
 }
